fix: 全て配列に入れて返すように変更
