# openapi/openapi.yml
@@ -168,6 +168,41 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
   /orders:
+    get:
+      summary: "get orders"
+      description: "クエリパラメータでの指定がなければ現在未会計のオーダーを全て返します"
+      parameters:
+        - name: table_number
+          in: query
+          schema:
+            type: string
+          description: "return open order for table number"
+        - name: order_id
+          in: query
+          schema:
+            type: string
+          description: "return order by order id"
+      responses:
+        '200':
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Order"
+        '401':
+          description: "Unauthorized"
+        '500':
+          description: "Internal Server Error"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Internal Server Error"
     post:
       summary: "initialize order"
       requestBody:
@@ -303,6 +338,10 @@ components:
           type: integer
         status:
           type: string
+        order_items:
+          type: array
+          items:
+            $ref: "#/components/schemas/OrderItem"
     
     OrderItem:
       type: object
